# Geopandas_template

./: README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  requirements.txt
src/geopandas_app/: feature_class.py  geopandas_app.py
src/geopandas_app/config/: config.py
src/geopandas_app/utils/: tools.py
tests/: test_geopandas_app.py
